- rewrite keymods/ledState -> modState (Control, Shift, numlock, capslock, alt)
- Update UTF8 support
- update wayland support 
new examples:
- DOOM example on website
- MicroUI example
- metal example
- fix vulkan example
- add OSMesa example
- Add minimal linking 
- Add custom backend example
- Add gamepad example
- Add no standard library example 

Current Release:    RGFW 1.06 (Aug 14, 2024)
-----------------------------------------------
Release:    RGFW 1.06 (Aug 14, 2024)
-----------------------------------------------
Quality of life update:
    more opengl options (core vs comp, disable double buffer, samples defaults to 0)
    deleted unneeded functions
    Experimental Wayland support
    re-done Makefile, with
    More MSVC support
    c++ support
    nuklear example
    Metal example
(Bug fixes)
    raw input data shouldn't be flipped
fix: window not at the front on macOS by @omnisci3nce in #29
fix(msvc): cpp cast error, .rh header redefinition warnings by @lesleyrs in #30
fix: gl33 example by @lesleyrs in #31
fix(windows): don't show dummy window on start by @lesleyrs in #32
-----------------------------------------------
Release:    RGFW 1.05 (Jul 24, 2024)
----------------------------------------------
fixes a lot of bugs
general quality of life/code updates
HTML5 backend
raw mouse input
-----------------------------------------------
Release:    RGFW 1.05 (Jul 5, 2024)
----------------------------------------------
RGFW 1.0 is Finally out, with plenty of bug fixes and features being properly implemented on all OSes.
Plus a couple more features added for sake of completeness. Some reworking of functions and other cleaning of the RGFW codebase.

All of RGFW's basic features should be mostly finished now, the next release will focus on adding things not included in base RGFW 1.0.
In later commits, the CHANGELOG will be updated while the release is being worked on.